Home Screen Decoration

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-ATLAS_URI=mongodb+srv://cumulus:cumulus123@cluster0.gjixh.mongodb.net/schooltimedb?retryWrites=true&w=majority
-#ATLAS_URI=mongodb://127.0.0.1:27017/schooltimedb
+#ATLAS_URI=mongodb+srv://cumulus:cumulus123@cluster0.gjixh.mongodb.net/schooltimedb?retryWrites=true&w=majority
+ATLAS_URI=mongodb://127.0.0.1:27017/schooltimedb
+PORT=9999
